--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,11 @@
 [phases.setup]
-nixPkgs = ["python312", "poetry"]
+nixPkgs = ["python311", "poetry"]
 
 [phases.install]
-cmds = ["cd backend && poetry install --no-dev"]
+cmds = [
+	"cd backend && poetry env use python3.11",
+	"cd backend && poetry install --no-dev"
+]
 
 [phases.build]
 cmds = ["echo 'Build phase complete'"]
