--- a/Dockerfile.fly
+++ b/Dockerfile.fly
@@ -18,7 +18,7 @@ COPY backend/data ./data
 
 # Install Python dependencies
 RUN poetry config virtualenvs.create false && \
-    poetry install --only main --no-interaction --no-ansi
+    poetry install --only main --no-interaction --no-ansi --no-root
 
 # Expose port
 EXPOSE 8080
