fix: Pass VITE_API_URL as build arg to Docker
Vite needs environment variables at build time, not runtime.
Updated Dockerfile to accept ARG and set ENV before npm build.
Moved VITE_API_URL from [env] to [build.args] in fly.toml.

--- a/Dockerfile.frontend.fly
+++ b/Dockerfile.frontend.fly
@@ -12,6 +12,10 @@ COPY frontend/tailwind.config.cjs ./
 COPY frontend/index.html ./
 COPY frontend/src ./src
 
+# Set build-time environment variable for Vite
+ARG VITE_API_URL
+ENV VITE_API_URL=${VITE_API_URL}
+
 # Install dependencies and build
 RUN npm install && npm run build
 
